; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/games/winmine/extr_main.c_InitBoard.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/games/winmine/extr_main.c_InitBoard.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i64, i32, i32, i8*, i8*, i8* }

@IDI_MINES = common dso_local global i32 0, align 4
@IDI_FACES = common dso_local global i32 0, align 4
@IDI_LEDS = common dso_local global i32 0, align 4
@IDM_BEGINNER = common dso_local global i32 0, align 4
@MF_CHECKED = common dso_local global i32 0, align 4
@IDM_MARKQ = common dso_local global i32 0, align 4
@MF_UNCHECKED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @InitBoard to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @InitBoard(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 3
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @IDI_MINES, align 4
  %8 = call i32 @MAKEINTRESOURCEW(i32 %7)
  %9 = call i8* @LoadBitmapW(i32 %6, i32 %8)
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 6
  store i8* %9, i8** %11, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 3
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @IDI_FACES, align 4
  %16 = call i32 @MAKEINTRESOURCEW(i32 %15)
  %17 = call i8* @LoadBitmapW(i32 %14, i32 %16)
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 5
  store i8* %17, i8** %19, align 8
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 3
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @IDI_LEDS, align 4
  %24 = call i32 @MAKEINTRESOURCEW(i32 %23)
  %25 = call i8* @LoadBitmapW(i32 %22, i32 %24)
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 4
  store i8* %25, i8** %27, align 8
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %29 = call i32 @LoadBoard(%struct.TYPE_5__* %28)
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %30, i32 0, i32 2
  %32 = load i32, i32* %31, align 8
  %33 = call i32 @GetMenu(i32 %32)
  store i32 %33, i32* %3, align 4
  %34 = load i32, i32* %3, align 4
  %35 = load i32, i32* @IDM_BEGINNER, align 4
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = trunc i64 %38 to i32
  %40 = add i32 %35, %39
  %41 = load i32, i32* @MF_CHECKED, align 4
  %42 = call i32 @CheckMenuItem(i32 %34, i32 %40, i32 %41)
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %44 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %43, i32 0, i32 0
  %45 = load i64, i64* %44, align 8
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %52

47:                                               ; preds = %1
  %48 = load i32, i32* %3, align 4
  %49 = load i32, i32* @IDM_MARKQ, align 4
  %50 = load i32, i32* @MF_CHECKED, align 4
  %51 = call i32 @CheckMenuItem(i32 %48, i32 %49, i32 %50)
  br label %57

52:                                               ; preds = %1
  %53 = load i32, i32* %3, align 4
  %54 = load i32, i32* @IDM_MARKQ, align 4
  %55 = load i32, i32* @MF_UNCHECKED, align 4
  %56 = call i32 @CheckMenuItem(i32 %53, i32 %54, i32 %55)
  br label %57

57:                                               ; preds = %52, %47
  %58 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %59 = call i32 @CheckLevel(%struct.TYPE_5__* %58)
  ret void
}

declare dso_local i8* @LoadBitmapW(i32, i32) #1

declare dso_local i32 @MAKEINTRESOURCEW(i32) #1

declare dso_local i32 @LoadBoard(%struct.TYPE_5__*) #1

declare dso_local i32 @GetMenu(i32) #1

declare dso_local i32 @CheckMenuItem(i32, i32, i32) #1

declare dso_local i32 @CheckLevel(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
